# ChangeLog file for sql
# This file is updated with Maddlog

* Tue Nov  7 2017 Sjoerd Mullender <sjoerd@acm.org>
- The internal NULL representation of the REAL (FLOAT) and DOUBLE
  types was changed from the smallest representable finite value to NaN
  (not-a-number).

* Tue Aug  1 2017 Sjoerd Mullender <sjoerd@acm.org>
- Lots of changes to streamline the internal error handling.
  In principle, all errors should now include a SQLSTATE error code
  (see the SQL standard).

* Thu Jul 20 2017 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Added support for extracting the quarter (number between 1 and 4)
  of a date or a timestamp or a timestamp with timezone in SQL:
   EXTRACT ( QUARTER FROM my_date_expr ).
  Added support for extracting the week (number between 1 and 53)
  of a date or a timestamp or a timestamp with timezone in SQL:
   EXTRACT ( WEEK FROM my_date_expr ).
  Added support for scalar functions: quarter(date_expr),
  quarter(timestamp_expr) and quarter(timestamptz_expr).
