@@ -1,0 +1,106 @@
+stdout of test 'drop_schema_restrict.Bug-6438` in directory 'sql/test/BugTracker-2017` itself:
+
+
+# 17:29:19 >  
+# 17:29:19 >  "mserver5" "--debug=10" "--set" "gdk_nr_threads=0" "--set" "mapi_open=true" "--set" "mapi_port=33045" "--set" "mapi_usock=/var/tmp/mtest-16183/.s.monetdb.33045" "--set" "monet_prompt=" "--forcemito" "--dbpath=/export/scratch1/dinther/INSTALL/var/MonetDB/mTests_sql_test_BugTracker-2017"
+# 17:29:19 >  
+
+# MonetDB 5 server v11.28.0
+# This is an unreleased version
+# Serving database 'mTests_sql_test_BugTracker-2017', using 4 threads
+# Compiled for x86_64-unknown-linux-gnu/64bit with 128bit integers
+# Found 31.312 GiB available main-memory.
+# Copyright (c) 1993-July 2008 CWI.
+# Copyright (c) August 2008-2017 MonetDB B.V., all rights reserved
+# Visit https://www.monetdb.org/ for further information
+# Listening for connection requests on mapi:monetdb://catskill.da.cwi.nl:33045/
+# Listening for UNIX domain connection requests on mapi:monetdb:///var/tmp/mtest-16183/.s.monetdb.33045
+# MonetDB/GIS module loaded
+# MonetDB/SQL module loaded
+
+Ready.
+
+# 17:29:20 >  
+# 17:29:20 >  "mclient" "-lsql" "-ftest" "-Eutf-8" "-i" "-e" "--host=/var/tmp/mtest-16183" "--port=33045"
+# 17:29:20 >  
+
+#CREATE SCHEMA xyz;
+#CREATE TABLE xyz.t1 (col1 int Primary Key);
+#CREATE VIEW xyz.v1 as SELECT col1 FROM xyz.t1 WHERE col1 > 0 ORDER BY col1;
+#INSERT INTO xyz.t1 VALUES (0), (2), (1);
+[ 3	]
+#SELECT * FROM xyz.t1;
+% xyz.t1 # table_name
+% col1 # name
+% int # type
+% 1 # length
+[ 0	]
+[ 2	]
+[ 1	]
+#SELECT * FROM xyz.v1;
+% xyz.v1 # table_name
+% col1 # name
+% int # type
+% 1 # length
+[ 1	]
+[ 2	]
+#SELECT * FROM xyz.t1;
+% xyz.t1 # table_name
+% col1 # name
+% int # type
+% 1 # length
+[ 0	]
+[ 2	]
+[ 1	]
+#SELECT * FROM xyz.v1;
+% xyz.v1 # table_name
+% col1 # name
+% int # type
+% 1 # length
+[ 1	]
+[ 2	]
+#SELECT * FROM xyz.t1;
+% xyz.t1 # table_name
+% col1 # name
+% int # type
+% 1 # length
+[ 0	]
+[ 2	]
+[ 1	]
+#SELECT * FROM xyz.v1;
+% xyz.v1 # table_name
+% col1 # name
+% int # type
+% 1 # length
+[ 1	]
+[ 2	]
+#DROP SCHEMA xyz CASCADE;
+#DROP SCHEMA IF EXISTS xyz CASCADE;
+#CREATE SCHEMA xyz2;
+#CREATE TABLE xyz2.t1 (col1 int Primary Key);
+#CREATE VIEW xyz2.v1 as SELECT col1 FROM xyz2.t1 WHERE col1 > 0 ORDER BY col1;
+#INSERT INTO xyz2.t1 VALUES (0), (2), (1);
+[ 3	]
+#SELECT * FROM xyz2.t1;
+% xyz2.t1 # table_name
+% col1 # name
+% int # type
+% 1 # length
+[ 0	]
+[ 2	]
+[ 1	]
+#SELECT * FROM xyz2.v1;
+% xyz2.v1 # table_name
+% col1 # name
+% int # type
+% 1 # length
+[ 1	]
+[ 2	]
+#DROP TABLE xyz2.t1 CASCADE;
+#DROP SCHEMA xyz2 RESTRICT;
+#DROP SCHEMA IF EXISTS xyz2 CASCADE;
+
+# 17:29:20 >  
+# 17:29:20 >  "Done."
+# 17:29:20 >  
+
